<resources>
    <string name="app_name">My Tour Guide</string>
    <string name="facebook_app_id">1616969582026440</string>
    <string name="fb_login_protocol_scheme">fb1616969582026440</string>

    <string name="google_login">Sign in with Google</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="guest">Guest</string>
    <string name="profile">Profile</string>
    <string name="start">Start</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="map">Map</string>
    <string name="suggestions">Suggestions</string>
    <string name="error_map">You can\'t make map requests</string>
    <string name="search_place">Search a place</string>
    <string name="google_api" translatable="false">AIzaSyAgxuI0TDOkNf0WurR3Rsqzn6Hxz0s87lo</string>
    <string name="gps_perrmissions">Enable gps usage to find your location</string>
    <string name="gps_enabled">You have enabled the gps!</string>
    <string name="gps_denied">You have denied the use of gps!</string>
    <string name="more_info">Infos...</string>
    <string name="how_to_get_there">How to get there</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Temple_of_Hephaestus">Temple of Hephaestus</string>
    <string name="interests">Interests</string>
    <string name="age_group">Age group</string>
    <string name="transport">Transport</string>
    <string name="Culture">Culture</string>
    <string name="Strolling">Strolling</string>
    <string name="Sport">Sports</string>
    <string name="Religion">Religion</string>
    <string name="Setup_profile">You have to set up your profile</string>
    <string name="max_distance">Max distance(in km)</string>
    <string name="children">I have little children</string>
    <string name="entertainment">Entertainment</string>
    <string name="museums">Museums</string>
    <string name="monuments">Monuments</string>
    <string name="theater">Theater</string>
    <string name="stadiums">Stadiums</string>
    <string name="sports">Sports</string>
    <string name="churches">Churches</string>
    <string name="monasteries">Monasteries</string>
    <string name="dining">Coffee/Dining</string>
    <string name="shopping" translatable="false">Shopping</string>
    <string name="dest_image">Image of place</string>
    <string name="pushchair">I have pushchair</string>
    <string name="yes">Yes</string>
    <string name="no">\No</string>
    <string name="gps_needed">You have to open the gps to use this!</string>
    <string name="gps_suggest">"Your GPS seems to be disabled, do you want to enable it?"</string>
    <string name="about_athens">General info</string>
    <string name="favorites">Favorites</string>
    <string name="places">Places</string>
    <string name="home">Home</string>
    <string name="no_favorites">You do not have any favorite place!</string>
    <string name="info_about_athens_header">About Athens</string>
    <string name="athens_info1">One of the most ancient cities of the world, Athens Greece is famous as the birthplace of democracy.
        With a history of over 3,000 years, Athens is the best town for sightseeing. According to the myth, the city took its name after Athena,
        the Goddess of Wisdom and daughter of Zeus. She was the protector of the city and in fact, the temple of Parthenon on the Acropolis is dedicated to her.
</string>

<string name="athens_info2">The first traces of Athens date from the Mycenaean period,
    while it reached its peak after at the 5th century BC, known as the Golden Century of Pericles,
    the Athenian statesman who has inspired so many innovations for his homeland and led it to its glory.
    From as early as the 8th century BC, Athens was gradually developing into an important city-state for Greece,
    giving emphasis on culture and its naval power. But it was in the 5th century BC when great political formations were made,
    new buildings were constructed, including the Acropolis, the Temple of Poseidon at Sounion and the Ancient Agora, and victorious
    imperials wars took place so that Athens would obtain new economical sources.</string>
    <string name="athens_info">Athens is the capital of Greece since 1834 and the largest and most populous city in the country.
        It is located in Attica, in eastern central Greece, and is one of the oldest cities in the world, with its recorded history reaching up to 3,200 BC.Allah.</string>
    <string-array name="age_class_array">
        <item>Undefined</item>
        <item>Teen/Adult</item>
        <item>Middle-aged</item>
        <item>Elder</item>
    </string-array>

    <string-array name="transport_class_array">
        <item>Undefined</item>
        <item>Car</item>
        <item>Means of transport</item>
    </string-array>

</resources>