<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:id="@+id/home"
        app:showAsAction="ifRoom"/>
<item android:title="@string/profile"
    android:icon="@drawable/ic_baseline_account_circle_24"
    android:id="@+id/profile"
    app:showAsAction="ifRoom"/>
<item android:title="@string/suggestions"
    android:icon="@drawable/ic_baseline_directions_walk_24"
    android:id="@+id/start"
    app:showAsAction="ifRoom"/>
    <item android:title="@string/map"
        android:icon="@drawable/ic_baseline_map_24"
        android:id="@+id/map"
        app:showAsAction="ifRoom"/>
</menu>