<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/normal"
            android:icon="@drawable/ic_baseline_maps_home_work_24"
            android:title="@string/normal"
            android:checked="true"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/hybrid"
            android:icon="@drawable/ic_baseline_satellite_24"
            android:title="@string/hybrid"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/terrain"
            android:icon="@drawable/ic_baseline_terrain_24"
            android:title="@string/terrain"
            app:showAsAction="ifRoom"/>
    </group>


</menu>