<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ael_expanded="false"
            app:ael_duration="500"
            app:ael_interpolator="bounce"
            app:ael_orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/interests"
                android:textSize="20sp" />


        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/primaryDarkColor" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/interests"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp">

            <Button
                android:id="@+id/culture_button"
                style="@style/InterestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Culture"
                app:icon="@drawable/button_icon"
                app:layout_constraintBottom_toBottomOf="@+id/sport_button"
                app:layout_constraintEnd_toStartOf="@+id/sport_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/sport_button"
                style="@style/InterestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Sport"
                app:icon="@drawable/button_icon"
                app:layout_constraintBottom_toTopOf="@+id/religion_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/culture_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/religion_button"
                style="@style/InterestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Religion"
                app:icon="@drawable/button_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/strolling_button"
                app:layout_constraintTop_toBottomOf="@+id/sport_button" />

            <Button
                android:id="@+id/strolling_button"
                style="@style/InterestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Strolling"
                app:icon="@drawable/button_icon"
                app:layout_constraintBottom_toBottomOf="@+id/religion_button"
                app:layout_constraintEnd_toStartOf="@+id/religion_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/primaryDarkColor" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_class"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/age_group">

            <AutoCompleteTextView
                android:id="@+id/age_choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/primaryDarkColor" />


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/has_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/primaryDarkColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/enable_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_distance" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:stepSize="0.5"
            android:valueFrom="1.0"
            android:valueTo="10.0" />/>
    </LinearLayout>

</FrameLayout>
