<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardElevation="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/dest_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/dest_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="16dp">

            <!-- Title, secondary and supporting text -->

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="type"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/hide_show_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/cardview_light_background"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Buttons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandable_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/infoTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/directionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/how_to_get_there"
                app:layout_constraintStart_toEndOf="@+id/infoButton"
                app:layout_constraintTop_toBottomOf="@+id/infoTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/infoButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:text="@string/more_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTxt" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>